# arcane-demos

./: .gitignore  .gitmodules  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
Unreal/ArcaneDemo/: .gitignore  ArcaneDemo.uproject  BuildArcaneDemo.ps1  CleanRebuild.ps1  NETWORKING_LAYER_ONLY.md  OpenArcaneDemo.ps1  PackageArcaneDemo.ps1  README.md  RunGameNoEditor.ps1
Unreal/ArcaneDemo/Config/: DefaultEngine.ini
Unreal/ArcaneDemo/Content/: CHARACTER_ASSETS.txt
Unreal/ArcaneDemo/Content/Maps/: ArcaneDemoMap.umap  CREATE_LEVEL.txt
Unreal/ArcaneDemo/Docs/: UNREAL_UNITS_AND_SCALE.md
Unreal/ArcaneDemo/Plugins/ArcaneClient/: .gitignore  ArcaneClient.uplugin  LIBRARY_PLUG_AND_PLAY.md  README.md
Unreal/ArcaneDemo/Scripts/: Copy-CharacterFromTemplate.ps1  TriggerLiveCoding.ps1
Unreal/ArcaneDemo/Source/: ArcaneDemo.Target.cs  ArcaneDemoEditor.Target.cs
Unreal/ArcaneDemo/Source/ArcaneDemo/: ArcaneDemo.Build.cs  (+2 more)
crates/arcane-demo/: Cargo.toml
crates/arcane-demo/src/: cluster_demo.rs  clustering_sim.rs  lib.rs  main.rs
crates/arcane-demo/src/module_bindings/: mod.rs  update_player_input_reducer.rs
crates/arcane-demo/src/swarm/: metrics.rs  mod.rs  movement.rs  stub_client.rs
crates/arcane-demo/tests/: clustering_sim_tests.rs  group_behaviour_tests.rs
docs/: ARCANE_BENCHMARK_NEXT_STEPS.md  ARCANE_BENCHMARK_SETUP.md  ARCANE_SCALING_TEST.md  ARCANE_VS_SPACETIMEDB_ANALYSIS.md  ARCHITECTURE_INDEX.md  ARTIFACT_BOUNDARY_POLICY.md  BENCHMARK_RESULTS.md  CANONICAL_BENCHMARK_PARAMS.md  CLUSTERING_EXPERIMENTS.md  COMPATIBILITY_MATRIX.md  DEMO_GOAL.md  DEMO_ONEPAGER.md  DEMO_TODO.md  MODULE_INTERACTIONS.md  SCALING_EXPERIMENT_RESULTS.md  SPACETIMEDB_BENCHMARK_RESULTS.md  SPACETIMEDB_ONLY_SETUP.md  STATE_OF_THE_ART.md
scripts/: generate_spacetime_bindings.ps1  plot_clustering.py  restart_demo_multi.ps1  run_clustering_experiments.sh  run_demo.ps1  run_demo_multi.ps1  run_demo_spacetime.ps1  run_two_clients.ps1  verify_demo_ready.ps1
scripts/benchmark/: BENCHMARK.md  INDUSTRY_BENCHMARKS.md  SCENARIO_AND_CRITICISMS.md  plot_benchmark.py  run_benchmark.ps1
scripts/swarm/: Run-ArcaneCeilingSweep.ps1  Run-ArcaneScalingSweep.ps1  Run-SpacetimeDBCeilingSweep.ps1  arcane_ceiling_sweep.csv  arcane_scaling_sweep.csv  spacetimedb_ceiling_sweep.csv
scripts/verification-loop/: EDITOR_VS_GAME.md  README.md  capture_game.py  requirements-capture.txt  run_verification.ps1  run_verification_multi.ps1  sequence.txt  sequence.txt.example
scripts/verification-loop/capture/: .gitkeep  VERIFICATION_SUMMARY.md
(+64 files in other folders)
