[package]
name = "arcane-demo"
version = "0.1.0"
edition = "2021"
description = "Arcane Engine — demo runner and clustering visualization (no Unreal). Demo-only logic lives here; library is arcane-infra/arcane-core."

[lib]
name = "arcane_demo"
path = "src/lib.rs"

[[bin]]
name = "arcane-viz"
path = "src/main.rs"

[[bin]]
name = "arcane-cluster-demo"
path = "src/bin/arcane_cluster_demo.rs"

[dependencies]
# Path to sibling arcane repo (clone arcane next to arcane-demos, e.g. E:\code\arcane and E:\code\arcane-demos)
arcane-infra = { path = "../../../arcane/crates/arcane-infra", features = ["cluster-ws"] }
arcane-core = { path = "../../../arcane/crates/arcane-core" }
rand = "0.8"
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
