[package]
name = "arcane-demo"
version = "0.1.0"
edition = "2021"
description = "Arcane Engine — demo runner and clustering visualization (no Unreal). Demo-only logic lives here; library is arcane-infra/arcane-core."
license = "AGPL-3.0-only"

[lib]
name = "arcane_demo"
path = "src/lib.rs"

[[bin]]
name = "arcane-viz"
path = "src/main.rs"

[[bin]]
name = "arcane-node-demo"
path = "src/bin/arcane_node_demo.rs"

[[bin]]
name = "arcane-spacetime-sim"
path = "src/bin/arcane_spacetime_sim.rs"

[[bin]]
name = "arcane-swarm"
path = "src/bin/arcane_swarm.rs"

[[bin]]
name = "arcane-swarm-sdk"
path = "src/bin/arcane_swarm_sdk.rs"

[dependencies]
# Git submodule at repo root: `arcane/` (see .gitmodules). Init: `git submodule update --init --recursive`.
arcane-infra = { path = "../../arcane/crates/arcane-infra", features = ["cluster-ws", "spacetimedb-persist"] }
arcane-core = { path = "../../arcane/crates/arcane-core" }
rand = "0.8"
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.21", optional = true }
futures-util = { version = "0.3", optional = true }
spacetimedb-sdk = { version = "2.0.5", optional = true }
log = { version = "0.4", optional = true }

[features]
default = []
spacetime-sim = ["dep:reqwest", "dep:serde"]
swarm = ["dep:reqwest", "dep:serde", "dep:tokio", "dep:tokio-tungstenite", "dep:futures-util"]
swarm-sdk = ["dep:spacetimedb-sdk", "dep:tokio", "dep:log"]
